# DS_Project

./: .env  .gitignore  .pylintrc  environment.yml  file_structure.txt  main.py  pyproject.toml  requirements.txt  spec-file.txt
data/processed/: data_describe.csv  data_quality.txt  sentiment_small.csv  statistics.csv
data/processed/companies/activia/: activia_relevant_tweets.csv  top_bigrams.csv  top_words.csv
data/processed/companies/chobani/: chobani_relevant_tweets.csv  top_bigrams.csv  top_words.csv
data/processed/companies/dannon/: dannon_relevant_tweets.csv  top_bigrams.csv  top_words.csv
data/processed/companies/fage/: fage_relevant_tweets.csv  top_bigrams.csv  top_words.csv
data/processed/companies/greek_gods/: greek_gods_relevant_tweets.csv  top_bigrams.csv  top_words.csv
data/processed/companies/liberte/: liberte_relevant_tweets.csv  top_bigrams.csv  top_words.csv
data/processed/companies/maple_hill/: maple_hill_relevant_tweets.csv  top_bigrams.csv  top_words.csv
data/processed/companies/noosa/: noosa_relevant_tweets.csv  top_bigrams.csv  top_words.csv
data/processed/companies/siggi/: top_bigrams.csv  (+2 more)
data/raw/: ds1.csv  ds2.csv  ds3.csv
hardware/: pytorchtest.py
notebooks/: yogurt.ipynb
notes/: challenges.txt  companies_list.txt  decisions.txt  improvements.txt  questions.txt  sources.txt  tomorrow  unique_files.txt
src/data/: preprocess.py  sentiment_analysis.py
src/processing/: preprocess.py  sentiment_analysis.py  theme_analyzer.py
src/resources/: brands_data.py  word_lists.py
src/visualization/: top_words_and_bigrams.py
(+15 files in other folders)
